--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .cabecalho {
-    background-color: #fd3946;
+    background-color: cyan;
     color: rgb(6, 6, 6);
     display: flex;
    justify-content: space-around;
@@ -18,7 +18,7 @@
     width: 25%;
 }
 .escola{
-    background-image: linear-gradient(#fd3946,#df7e8e);
+    background-image: linear-gradient(#001aff,#df7e8e);
     color: white;
     display: flex;
     justify-content: center;
@@ -27,7 +27,7 @@
 }
 .escola-div-conteudo{
     width: 35%;
-    background-image: url(https://i0.wp.com/files.agro20.com.br/uploads/2019/08/pimenta-biquinho-2.jpg?fit=1024%2C576&ssl=1);
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fm.facebook.com%2Fbadvibesmemes%2Fphotos%2Fuma-gota-de-esperan%25C3%25A7a%2F4095093127276363%2F&psig=AOvVaw3wV1X-nG2cdeXZnc1sYHgH&ust=1682508756369000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCNidr933xP4CFQAAAAAdAAAAABAD);
 }
 .escola-titulo{
     padding: 24px 0;
