--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .cabecalho {
-    background-color: cyan;
+    background-color: rgb(48, 33, 49);
     color: rgb(6, 6, 6);
     display: flex;
    justify-content: space-around;
@@ -18,7 +18,7 @@
     width: 25%;
 }
 .escola{
-    background-image: linear-gradient(#001aff,#df7e8e);
+    background-image: linear-gradient(#f07605,#e20505);
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
