--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 .escola-div-conteudo{
     width: 35%;
-    background-image: url(https://i0.wp.com/justocantins.com.br/wp-content/uploads/2023/04/Pimenta-biquinho-Canva.jpg?fit=1024%2C683&ssl=1);
+    background-image: url(https://tropicalestufas.com.br/wp-content/uploads/2020/05/biquinho_capa.jpg);
 }
 .escola-titulo{
     padding: 24px 0;
