--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .cabecalho {
-    background-color: rgba(48, 33, 49, 0);
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     display: flex;
    justify-content: space-around;
