--- a/style.css
+++ b/style.css
@@ -32,3 +32,16 @@
 .escola-titulo{
     padding: 24px 0;
 } 
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav a :hover {
+color: aqua;
+cursor: pointer;
+}
